# pysvc

./: .gitignore  README.md  pyproject.toml
src/pysvc/: main.py
src/pysvc/entrypoints/: main.py
src/pysvc/entrypoints/rest/: healthz.py  server.py
src/pysvc/handlers/rest/: server.py
tests/handlers/rest/: conftest.py  test_healthz.py
